--- a/db.yaml
+++ b/db.yaml
@@ -10,7 +10,7 @@
       state: latest
   
   - name: start and enable MySQL server
-    ansible.builtin.server:
+    ansible.builtin.service:
       name: mysqld
       state: started
       enabled: yes
