--- a/db.yaml
+++ b/db.yaml
@@ -3,6 +3,10 @@
   become: yes
   vars:
    login_host: db.balkriishna.online
+  vars_prompt:
+  - name: mysql_root_password
+    prompt: please enter root password
+    private: no
   tasks:
   - name: install MySQL server
     ansible.builtin.dnf:
@@ -15,11 +19,19 @@
       state: started
       enabled: yes
   
+  - name: install python mysql dependencies
+    ansible.builtin.pip:
+      name:
+      - PyMySQL
+      - cryptography
+      executable: pip3.9 #pip3.11 if python version is 3.11
+
+  
   # check mysql root password set up or not
   - name: check DB connection
     community.mysql.mysql_info:
      login_user: root
-     login_password: ExpenseApp@1
+     login_password: "{{ mysql_root_password }}"
      login_host: "{{ login_host }}"
      filter: version
     ignore_errors: yes
@@ -28,3 +40,7 @@
   - name: print output
     ansible.builtin.debug:
       msg: "Output: {{ mysql_connection_output }}"
+  
+  - name: setup root password
+    ansible.builtin.command: "mysql_secure_installation --set-root-pass {{ mysql_root_password }}"
+    when: mysql_connection_output.failed is true # don't give {{ }} in when condition
